services/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://node.server.org"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
  - host: node.server.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: node-service
          servicePort: 8000
